--- a/src/app/Pages/notifaction/notifaction.html
+++ b/src/app/Pages/notifaction/notifaction.html
@@ -1,7 +1,7 @@
-<div class="mb-5 notifiction-sec text-white px mt-4 ">
-  <h1 class=" text-end big mt-5">NOTIFICATIONS</h1>
+<div class="container">
+  <h1 class=" text-end big mt-5 text-white ">NOTIFICATIONS</h1>
 
-  <div class="p-md-5 p-3 rounded row notifiction">
+  <div class="p-md-5 p-3 rounded row text-white  notifiction">
     <div class="col-6"></div>
     <div class="mt-0 col-md-6 text-end pe-4">
       <div class="dropdown ps-5 mt-3">
