--- a/src/app/Pages/profile/Components/feedback-employees/feedback-employees.html
+++ b/src/app/Pages/profile/Components/feedback-employees/feedback-employees.html
@@ -1,6 +1,6 @@
 <div class="text-white feed-back px-md-0 px-3 my-8">
     <div class=" " style="background-image: none;">
-<h1 class="mt-5 text-white px text-end big mb-4"> FEEDBACK</h1>
+<h1 class="mt-5 text-white px-0 text-end big mb-4"> FEEDBACK</h1>
         <div class="p-lg-5 p-4 pb-5 rounded g-4 row feedback-box mb-5 pe-lg-4">
             <div class="col-1 p-0 mt-0">
                 <p class="mb-0">AVERAGE </p>
@@ -52,7 +52,6 @@
                   </div>
                 }
             </div>
-        <h1 class="text-end pe-0 date mt-4">{{ currentYear }}</h1>
         </div>
 
 
