--- a/src/app/Pages/Auth/login/login.scss
+++ b/src/app/Pages/Auth/login/login.scss
@@ -28,7 +28,9 @@ input{
     .signup-box, .rightSide {
         width: 100% !important;
     }
-
+    .rightSide {
+        display: none !important;
+    }
 
 }
 @media (max-width: 768px) {
