--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1460,7 +1460,7 @@ body {
         font-size: 12px !important;
     }
     .client-profile img {
-        max-width:140px;
+        // max-width:140px;
     }
     .client-profile h5 {
         font-size:14px;
