--- a/src/app/Pages/projects/addproject/addproject.html
+++ b/src/app/Pages/projects/addproject/addproject.html
@@ -183,9 +183,8 @@
       [disabled]="isLoading()"
   [style.cursor]="isLoading() ? 'not-allowed' : 'pointer'"
   >
-         {{ isLoading() ? 'Adding...' : 'Add Project' }}
+         {{ isLoading() ? 'ADDING PROJECT...' : '    ADD PROJECT' }}
 
-    ADD PROJECT
     <i class=" fa-solid fa-arrow-right fs-4" style="color: #00bec5;"></i>
   </button>
  </div>
