--- a/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
+++ b/src/app/Pages/Interfaces_Employee/projectDetalis/components/upload-files/upload-files.html
@@ -6,7 +6,7 @@
         <div class="col-xl-8 col-lg-9 text-md-start text-center">
           <div class="row">
             @switch (aboutproject()?.projectType) {
-            @case (0) { <h5 class="fw-bold mb-3 ps-0">Simple Prpject</h5>}
+            @case (0) { <h5 class="fw-bold mb-3 ps-0">One time Project</h5>}
             @case (1) { <h5 class="fw-bold mb-3 ps-0">Social Media</h5>
             }
             @case (2) { <h5 class="fw-bold mb-3 ps-0">Media Buying</h5>
