--- a/src/app/Pages/profile/profile.html
+++ b/src/app/Pages/profile/profile.html
@@ -165,7 +165,7 @@
                             <p class="p-0  mb-3  " style="white-space: pre-line;">
                                 PROJECT SUCCESS RATE
                             </p>
-                            <span class="px-0">{{ aboutEmployees()?.projectsStats?.totalProjectsCompleted}}%</span>
+                            <span class="px-0  mt-2" style="line-height: 1;">{{ aboutEmployees()?.projectsStats?.totalProjectsCompleted}}%</span>
                         </div>
                     </div>
                 </div>
