--- a/src/app/Pages/projects/projectDetalis/components/todolist/todolist.html
+++ b/src/app/Pages/projects/projectDetalis/components/todolist/todolist.html
@@ -1,55 +1,52 @@
+
 <div class="mynotes px-md-0 px-3">
   <h1 class="big text-end text-white mt-5 pt-5 mb-3">MY NOTES</h1>
 
   <div class="todo-container text-white p-md-5 p-3">
-    <h4 class=" mb-0 ">My Notes</h4>
+    <h4 class="mb-0">My Notes</h4>
     <p class="low">These notes can only be seen by you</p>
 
     <!-- To-Do List Section -->
     <div class="todo-list">
-      <!-- message when empty -->
-      <div class="no-notes" *ngIf="todoList.length === 0">No Notes Yet</div>
+      @if(activeNotes().length === 0){
+      <div class="no-notes">No Notes Yet</div>
+
+      }
 
       <!-- todo items -->
-      <div class="todo-item" *ngFor="let item of todoList">
+      @for (activeNote of activeNotes(); track activeNote.id) {
+      <div class="todo-item">
         <div class="todo-content">
-          <input
-            type="checkbox"
-            class="circle-btn"
-            (change)="toggleComplete(item, false)"
-          />
-          <p class="todo-text">{{ item.noteContent }}</p>
+          <input type="checkbox" class="circle-btn"               [checked]="activeNote.isCompleted" (change)="toggleComplete(activeNote)" />
+          <p class="todo-text">{{ activeNote.noteContent }}</p>
         </div>
 
-        <button class="star-btn mb-0" [class.active]="item.isFav" (click)="toggleStar(item)">
+        <button class="star-btn mb-0" [class.active]="activeNote.isFav" (click)="toggleStar(activeNote)">
           <i class="fa fa-star"></i>
         </button>
-
       </div>
+
+      }
     </div>
 
     <!-- Completed Section -->
-    <h4 class=" com-header mb-2 mt-2">Completed</h4>
+    <h4 class="com-header mb-2 mt-2">Completed</h4>
     <div class="completed-list">
-      <div class="no-notes" *ngIf="completedList.length === 0">No Completed Notes Yet</div>
+      @if(completedList().length === 0){
+      <div class="no-notes">No Completed Notes Yet</div>
 
-      <div class="todo-item" *ngFor="let item of completedList">
+      } @for (complete of completedList(); track complete.id) {
+      <div class="todo-item">
         <div class="todo-content">
-          <input
-            type="checkbox"
-            class="circle-btn"
-            checked
-            (change)="toggleComplete(item, true)"
-          />
-          <p class="todo-text done">{{ item.noteContent }}</p>
+          <input type="checkbox" class="circle-btn"    [checked]="complete.isCompleted"  (change)="toggleComplete(complete)" />
+          <p class="todo-text done">{{ complete.noteContent }}</p>
         </div>
 
-        <button class="star-btn mb-0" [class.active]="item.isFav" (click)="toggleStar(item)">
+        <button class="star-btn mb-0" [class.active]="complete.isFav" (click)="toggleStar(complete)">
           <i class="fa fa-star"></i>
         </button>
-
-     
       </div>
+      }
     </div>
   </div>
 </div>
